Add patch method, do not return measurements for asset
