# api/controller/asset.py
@@ -29,10 +29,10 @@ def post(role, energy_unit, is_accumulated, manufacturer=None, model=None, seria
 
      # noqa: E501
 
-    :param role: Whether this assset is a producer, consumer or both (like a battery)
-    :type role: dict | bytes
+    :param role: Whether this assset is a producer or consumer
+    :type role: str
     :param energy_unit: 
-    :type energy_unit: dict | bytes
+    :type energy_unit: str
     :param is_accumulated: 
     :type is_accumulated: bool
     :param manufacturer: 
@@ -88,6 +88,37 @@ def get(asset_id):  # noqa: E501
     else:
         abort(404, f"Asset not found for ID: {asset_id}")
 
+def patch(asset_id, manufacturer=None, model=None, serial_number=None, latitude=None, longitude=None):  # noqa: E501
+    """Update asset information by id
+
+     # noqa: E501
+
+    :param asset_id: 
+    :type asset_id: int
+    :param manufacturer: 
+    :type manufacturer: str
+    :param model: 
+    :type model: str
+    :param serial_number: 
+    :type serial_number: str
+    :param latitude: 
+    :type latitude: float
+    :param longitude: 
+    :type longitude: float
+
+    :rtype: Asset
+    """
+
+    # Query db by asset id
+    update_asset = Asset.query.filter(Asset.id == asset_id).one_or_none()
+
+    if update_asset is not None:
+        schema = AssetSchema()
+        # get python object from db object
+        data = schema.dump(update_asset).data
+        return "TODO: update asset info", 200
+    else:
+        abort(404, f"Asset not found for ID: {asset_id}")
 
 def get_energy(asset_id, time_start=None, time_end=None, accumulated=False, limit=5):  # noqa: E501
     """Get energy measurements of asset
