# swagger.yml
@@ -10,7 +10,7 @@ servers:
 security:
   - basicAuth: []
   - appID: []
-  
+
 paths:
   /asset:
     post:
@@ -47,6 +47,7 @@ paths:
         - in: query
           name: energyUnit
           required: true
+          description: Warning Cannot be changed easily using PATCH
           schema:
             $ref: '#/components/schemas/EnergyUnit'
         - in: query
@@ -102,6 +103,38 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Asset'
+    patch:
+      tags: 
+        - Asset
+      summary: Update asset information by id
+      parameters:
+        - in: query
+          name: manufacturer
+          schema:
+            type: string
+        - in: query
+          name: model
+          schema:
+            type: string
+        - in: query
+          name: serialNumber
+          schema:
+            type: string
+        - in: query
+          name: latitude
+          schema:
+            type: number
+        - in: query
+          name: longitude
+          schema:
+            type: number
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Asset'
     delete:
       tags:
         - Asset
@@ -143,7 +176,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Energy'
     get:
-      tags: 
+      tags:
         - Energy
       summary: Get energy measurements of asset
       parameters:
